--- a/.github/workflows/my_rpg_sender.yml
+++ b/.github/workflows/my_rpg_sender.yml
@@ -62,10 +62,10 @@ jobs:
         run: docker run epitechcontent/epitest-docker:latest
       - name: Install Valgrind
         if: steps.check_project.outputs.cancel != 'true'
-        run: sudo apt-get install valgrind -y
+        run: sudo apt install valgrind
       - name: Install CSFML
         if: steps.check_project.outputs.cancel != 'true'
-        run: sudo apt-get install libcsfml-dev -y
+        run: sudo apt install libcsfml-dev
       - name: Run Valgrind
         if: steps.check_project.outputs.cancel != 'true'
         run: make && make clean && echo -e "ls" | valgrind --error-exitcode=1 ./42sh
