[FIX] workflow fixed - Install CSFML

--- a/.github/workflows/my_rpg_sender.yml
+++ b/.github/workflows/my_rpg_sender.yml
@@ -57,6 +57,8 @@ jobs:
           fi
           exit 0
         id: check_project
+      - name: Install CSFML
+        run: sudo apt-get install libsfml-dev
       - name: Copilation test
         if: steps.check_project.outputs.cancel != 'true'
         run: make
