[ADD] inventory system added

--- a/config_files/items.config
+++ b/config_files/items.config
@@ -10,7 +10,7 @@
 
 # [ATTACK ITEMS]
 wood_sword:attack:10:1:001:none.png:10
-iron_sword:attack:20:1:002:none.png:20
+iron_sword:attack:20:1:002:iron_sword.png:20
 gold_sword:attack:30:1:003:none.png:30
 diamond_sword:attack:40:1:004:none.png:40
 
