[MANDATORY] minimal functions added

--- a/config_files/items.config
+++ b/config_files/items.config
@@ -9,7 +9,7 @@
 # item_name:type:value:amount_max:id:sprite_name:price
 
 # [ATTACK ITEMS]
-wood_sword:attack:10:1:001:wood_sword.png:10
+wood_sword:attack:10:1:001:none.png:10
 iron_sword:attack:20:1:002:iron_sword.png:20
 gold_sword:attack:30:1:003:none.png:30
 diamond_sword:attack:40:1:004:none.png:40
