[ADD] item drop system started

--- a/config_files/items.config
+++ b/config_files/items.config
@@ -6,6 +6,7 @@
 # if there is no sprite, put "none.png"
 # if the program does not find the sprite, it will put a default sprite ("none.png")
 # System of config file:
+# IMPORTANT : Amounts are disabled for now, so put 1 for the amount_max
 # item_name:type:value:amount_max:id:sprite_name:price
 
 # [ATTACK ITEMS]
