--- a/config_files/items.config
+++ b/config_files/items.config
@@ -13,7 +13,7 @@
 wood_sword:attack:10:1:001:none.png:10
 iron_sword:attack:20:1:002:iron_sword.png:20
 gold_sword:attack:30:1:003:none.png:30
-diamond_sword:attack:40:1:004:none.png:40
+crystal_sword:attack:40:1:004:none.png:40
 
 # [FOOD ITEMS]
 apple:food:10:64:005:none.png:1
@@ -22,9 +22,7 @@ fish:food:25:64:007:none.png:5
 meat:food:30:64:008:none.png:10
 
 # [HEALTH ITEMS]
-bandage:health:10:20:009:none.png:5
 potion:health:50:10:010:none.png:15
-heal_kit:health:200:1:011:none.png:25
 
 # [ARMOR ITEMS]
 leather_armor:armor:10:1:012:none.png:10
