[UPDATE] config file updated

--- a/config_files/items.config
+++ b/config_files/items.config
@@ -10,29 +10,27 @@
 # item_name:type:value:amount_max:id:sprite_name:price
 
 # [ATTACK ITEMS]
-wood_sword:attack:10:1:001:none.png:10
-iron_sword:attack:20:1:002:iron_sword.png:20
-gold_sword:attack:30:1:003:none.png:30
-crystal_sword:attack:40:1:004:none.png:40
+iron_sword:attack:10:1:002:iron_sword.png:10
+gold_sword:attack:20:1:003:gold_sword.png:20
+fire_sword:attack:30:1:001:none.png:40
+crystal_sword:attack:40:1:004:crystal_sword.png:80
 
 # [FOOD ITEMS]
-apple:food:5:64:005:none.png:1
-bread:food:10:64:006:none.png:2
-fish:food:15:64:007:none.png:5
-meat:food:20:64:008:none.png:10
+apple:food:5:64:005:apple.png:1
+bread:food:10:64:006:bread.png:2
+fish:food:15:64:007:fish.png:5
+meat:food:20:64:008:meat.png:10
 
 # [HEALTH ITEMS]
-potion:health:50:10:010:none.png:15
+potion:health:50:10:010:potion.png:15
 
 # [ARMOR ITEMS]
-leather_armor:armor:10:1:012:none.png:10
-iron_armor:armor:20:1:013:none.png:25
-gold_armor:armor:30:1:014:none.png:50
-diamond_armor:armor:40:1:015:none.png:100
-
-# [MAGIC ITEMS]
-fireball:magic:10:1:016:none.png:150
-thunder:magic:20:1:017:none.png:200
+leather_chest:armor:10:1:012:none.png:10
+iron_chest:armor:20:1:013:none.png:25
+diamond_chest:armor:40:1:015:none.png:100
+leather_boots:armor:10:1:016:none.png:10
+iron_boots:armor:20:1:017:none.png:25
+diamond_boots:armor:40:1:018:none.png:100
 
 # [IDLE ITEMS]
 # A voir par la suite
