[ADD] basic npc added into map

--- a/config_files/items.config
+++ b/config_files/items.config
@@ -25,7 +25,7 @@ meat:food:20:64:008:meat.png:10
 potion:health:50:10:010:potion.png:15
 
 # [ARMOR ITEMS]
-leather_chest:armor:10:1:012:none.png:10
+wood_chest:armor:10:1:012:none.png:10
 iron_chest:armor:20:1:013:none.png:25
 diamond_chest:armor:40:1:015:none.png:100
 leather_boots:armor:10:1:016:none.png:10
