[ADD] NPC dialogue added

--- a/config_files/items.config
+++ b/config_files/items.config
@@ -25,12 +25,12 @@ meat:food:20:64:008:meat.png:10
 potion:health:50:10:010:potion.png:15
 
 # [ARMOR ITEMS]
-wood_chest:armor:10:1:012:none.png:10
-iron_chest:armor:20:1:013:none.png:25
-diamond_chest:armor:40:1:015:none.png:100
-leather_boots:armor:10:1:016:none.png:10
-iron_boots:armor:20:1:017:none.png:25
-diamond_boots:armor:40:1:018:none.png:100
+wood_chest:armor:10:1:012:gold_chest.png:10
+iron_chest:armor:20:1:013:gold_chest.png:25
+gold_chest:armor:40:1:015:gold_chest.png:100
+wood_hat:armor:10:1:016:wood_hat.png:10
+iron_hat:armor:20:1:017:iron_hat.png:25
+gold_hat:armor:40:1:018:gold_hat.png:100
 
 # [IDLE ITEMS]
 # A voir par la suite
